--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -7,48 +7,43 @@ body {
   text-align: left;
   max-width: 550px;
   margin: auto;
-  background: linear-gradient(135deg, #02aab0, #00cdac);
 }
 
-.main__title {
+.title {
   margin: 0px;
   padding-top: 10px;
   padding-bottom: 0px;
   text-align: center;
-  color: white;
 }
 
-.main__title h1 {
+.title h1 {
   margin-bottom: 5px;
 }
 
-.input__section {
+.inputSection {
   margin: auto;
 }
 
-.input__section form {
-  margin: 0px 70px 5px 70px;
+.inputSection form {
+  margin: 0 0 5px 0;
   align-items: center;
   display: flex;
   justify-content: space-between;
 }
 
 .item {
-  width: 300px;
+  width: 440px;
   height: 30px;
-  border-radius: 15px;
-  border: 1px solid #fbe7c6;
-  padding: 0px 30px;
+  padding: 0px 20px;
 }
 
 *:focus {
   outline: none;
 }
 
-.input__button {
-  background-color: transparent;
+.inputBtn {
+  background-color: blue;
   font-size: 30px;
-  line-height: 60px;
   margin-left: 5px;
   color: white;
   border: 0;
@@ -56,70 +51,61 @@ body {
 
 ul {
   margin: 0;
-  padding: 0;
+  padding: 10px;
   list-style: none;
+  border: 1px solid;
 }
 
 ul li {
   cursor: pointer;
   position: relative;
-  padding: 12px 8px 12px 110px;
-  background: #eee;
+  padding: 12px 10px 12px 10px;
   font-size: 18px;
   transition: 0.3s;
+}
+
+li {
+  border-bottom: 1px solid;
 }
 
 ul li:hover {
   background: #ddd;
 }
 
-.close {
+.delete {
   position: absolute;
   right: 10px;
   top: 0;
+  display: flex;
   align-items: center;
   text-align: center;
-  margin: 8px 60px;
   padding: 4px 8px;
   border: none;
   background: rgba(255, 255, 255, 0);
+  font-size: 30px;
 }
+
 .checkBtn {
   position: absolute;
   right: 50px;
   top: 0;
+  display: flex;
   align-items: center;
   text-align: center;
-  margin: 8px 60px;
   padding: 4px 8px;
   border: none;
   background: rgba(255, 255, 255, 0);
+  font-size: 30px;
 }
 
-.close:hover,
+.delete:hover,
 .checkBtn:hover {
-  background: linear-gradient(135deg, #02aab0, #00cdac);
-  border-radius: 100%;
-  color: white;
+  color: blue;
 }
 
 ul li.checked {
   background: #ddd;
-  color: #272341;
   text-decoration: line-through;
-}
-
-ul li.checked::before {
-  content: "";
-  position: absolute;
-  border-color: #272341;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 13px;
-  left: 80px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
 }
 
 @media screen and (max-width: 768px) {
@@ -130,7 +116,7 @@ ul li.checked::before {
     max-width: 100%;
   }
 
-  .input__section form {
+  .inputSection form {
     margin: 0px 30px 5px 30px;
     align-items: center;
     display: flex;
@@ -145,7 +131,7 @@ ul li.checked::before {
     padding: 0px 30px;
   }
 
-  .close {
+  .delete {
     position: absolute;
     align-items: center;
     text-align: center;
