fix: 클래스네이밍 변경

--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -71,7 +71,7 @@ ul li:hover {
   background: #ddd;
 }
 
-.delete {
+.deleteBtn {
   position: absolute;
   right: 10px;
   top: 0;
@@ -98,7 +98,7 @@ ul li:hover {
   font-size: 30px;
 }
 
-.delete:hover,
+.deleteBtn:hover,
 .checkBtn:hover {
   color: blue;
 }
@@ -131,7 +131,7 @@ ul li.checked {
     padding: 0px 30px;
   }
 
-  .delete {
+  .deleteBtn {
     position: absolute;
     align-items: center;
     text-align: center;
