--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -30,7 +30,7 @@ body {
   justify-content: space-between;
 }
 
-.item {
+.inputItem {
   width: 440px;
   height: 30px;
   padding: 0px 20px;
@@ -92,7 +92,7 @@ ul li:hover {
   display: flex;
   align-items: center;
   text-align: center;
-  padding: 4px 8px;
+  padding: 6px 8px;
   border: none;
   background: rgba(255, 255, 255, 0);
   font-size: 30px;
@@ -104,7 +104,6 @@ ul li:hover {
 }
 
 ul li.checked {
-  /* background: #ddd; */
   text-decoration: line-through;
 }
 
